tr ekleme işlemi

--- a/odevv.html
+++ b/odevv.html
@@ -9,6 +9,10 @@
     <div>
         <p>Merhaba</p>
     </div>
+    <tr>
+        <td>coffee</td>
+        <td>tea</td>
+    </tr>
     
 </body>
 </html>
