--- a/odevv.html
+++ b/odevv.html
@@ -13,6 +13,13 @@
         <td>coffee</td>
         <td>tea</td>
     </tr>
+    <div>
+        <tr>
+            <td>BMW</td>
+            <td>Mercedes</td>
+            <td>AUDİ</td>
+        </tr>
+    </div>
     
 </body>
 </html>
