--- a/odevv.html
+++ b/odevv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eren Can FAKIOĞLU</title>
 </head>
-<body>
+<body style="background-color: azure;">
     <div>
         <p>Merhaba</p>
     </div>
